[gd_scene load_steps=18 format=4 uid="uid://bndhtd7edulsl"]

[ext_resource type="Script" uid="uid://c6kshrmwny22a" path="res://Scripts/Mptest1.gd" id="1_2af0l"]
[ext_resource type="TileSet" uid="uid://dyooo0wfl0uxl" path="res://Misc/PItestF.tres" id="1_ruh4l"]
[ext_resource type="PackedScene" uid="uid://vlcwvxj3avsl" path="res://Prefabs/Party.tscn" id="2_cdso0"]
[ext_resource type="Texture2D" uid="uid://bx4a7inhet1ax" path="res://Textures/Background.png" id="3_4xn7t"]
[ext_resource type="Texture2D" uid="uid://bbdm26ldym1or" path="res://Textures/Background2.png" id="4_1cx8c"]
[ext_resource type="PackedScene" uid="uid://42iek8r25l0q" path="res://Prefabs/discord_manager.tscn" id="6_ugtmj"]
[ext_resource type="Script" uid="uid://b380884r4shpc" path="res://Scripts/MultiplayerManager.gd" id="7_hjehs"]
[ext_resource type="Script" uid="uid://dvslee3opjtlw" path="res://Scripts/ping.gd" id="8_iv8b4"]
[ext_resource type="PackedScene" uid="uid://daj3ae2jhpcy6" path="res://Prefabs/MPsprite.tscn" id="8_rpyn5"]
[ext_resource type="PackedScene" uid="uid://b3stq0cd5lo83" path="res://Prefabs/ping_spr.tscn" id="9_d71dx"]
[ext_resource type="Script" uid="uid://cigs7l5yhjf4i" path="res://Scripts/ContCursor.gd" id="10_40lmw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uplna"]
size = Vector2(32, 432)

[sub_resource type="Gradient" id="Gradient_ccghb"]
offsets = PackedFloat32Array(0.481283, 0.540107, 0.72)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_diat8"]
gradient = SubResource("Gradient_ccghb")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_0hbyb"]
resource_name = "Transition1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground1/ParallaxLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground2/ParallaxLayer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxBackground1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tosho"]
resource_name = "Transition2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground1/ParallaxLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground2/ParallaxLayer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxBackground1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ak5k"]
_data = {
&"Transition1": SubResource("Animation_0hbyb"),
&"Transition2": SubResource("Animation_tosho")
}

[node name="MPtest1" type="Node2D"]
texture_filter = 1
script = ExtResource("1_2af0l")
PlayerScene = ExtResource("2_cdso0")

[node name="TileMap" type="TileMap" parent="."]
z_index = -3
scale = Vector2(3, 3)
tile_set = ExtResource("1_ruh4l")
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD/////AAAAAAAAAAAAAP//AAAAAAIAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAIAAAAEAP//AAAAAAIAAAAFAP//AAAAAAAAAAD+////AAAAAAEAAAD9////AAAAAAEAAAD8////AAAAAAIAAAD7////AAAAAAAAAAD6////AAAAAAAAAAD5////AAAAAAEAAAAFAP7/AAAAAAEAAAAFAP3/AAAAAAEAAAAFAPz/AAAAAAIAAAAFAPv/AAAAAAEAAAAFAPr/AAAAAAIAAAAFAPn/AAAAAAIAAAAFAAAAAAAAAAIAAAAFAAEAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAAAAAAEAAUAAAAAAAEAAAADAAUAAAAAAAAAAAACAAUAAAAAAAEAAAABAAUAAAAAAAEAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAEAAAD//wQAAAAAAAIAAAD+/wQAAAAAAAAAAAD9/wQAAAAAAAIAAAD8/wQAAAAAAAEAAAD7/wQAAAAAAAIAAAD7/wUAAAAAAAEAAAD6/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAEAAAD+/wUAAAAAAAIAAAD5/wUAAAAAAAEAAAD5/wQAAAAAAAAAAAD5/wMAAAAAAAIAAAD5/wIAAAAAAAAAAAD5/wEAAAAAAAIAAAD5/wAAAAAAAAIAAAD5//7/AAAAAAIAAAD5//3/AAAAAAEAAAD5//z/AAAAAAEAAAD5//v/AAAAAAIAAAD5//r/AAAAAAAAAAD5//n/AAAAAAEAAAD6//n/AAAAAAAAAAD7//n/AAAAAAIAAAD8//n/AAAAAAIAAAD9//n/AAAAAAEAAAD+//n/AAAAAAEAAAD///n/AAAAAAIAAAAAAPn/AAAAAAEAAAABAPn/AAAAAAEAAAACAPn/AAAAAAEAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAEAAAAEAPr/AAAAAAIAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAEAAAAEAP3/AAAAAAIAAAAEAP7/AAAAAAIAAAAEAAAAAAAAAAIAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAIAAAAEAAMAAAAAAAIAAAAEAAQAAAAAAAEAAAADAAQAAAAAAAIAAAACAAQAAAAAAAIAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAEAAAD6/wQAAAAAAAAAAAD6/wMAAAAAAAEAAAD6/wIAAAAAAAIAAAD6/wEAAAAAAAEAAAD6/wAAAAAAAAEAAAD6//7/AAAAAAIAAAD6//3/AAAAAAEAAAD6//z/AAAAAAAAAAD6//v/AAAAAAAAAAD6//r/AAAAAAAAAAD7//r/AAAAAAIAAAD8//r/AAAAAAEAAAD9//r/AAAAAAAAAAD+//r/AAAAAAEAAAD///r/AAAAAAEAAAAAAPr/AAAAAAIAAAABAPr/AAAAAAAAAAACAPr/AAAAAAEAAAADAPr/AAAAAAEAAAADAPv/AAAAAAAAAAADAPz/AAAAAAIAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAAAAAACAAMAAAAAAAEAAAABAAMAAAAAAAEAAAAAAAMAAAAAAAEAAAD//wMAAAAAAAIAAAD+/wMAAAAAAAEAAAD9/wMAAAAAAAEAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAIAAAD7/wIAAAAAAAEAAAD7/wEAAAAAAAEAAAD7/wAAAAAAAAEAAAD8//7/AAAAAAIAAAD8//3/AAAAAAEAAAD8//z/AAAAAAEAAAD8//v/AAAAAAIAAAD7//v/AAAAAAIAAAD7//z/AAAAAAAAAAD7//3/AAAAAAIAAAD7//7/AAAAAAIAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAABAPv/AAAAAAEAAAACAPv/AAAAAAEAAAACAPz/AAAAAAIAAAACAP3/AAAAAAEAAAACAP7/AAAAAAEAAAACAAAAAAAAAAIAAAACAAEAAAAAAAAAAAACAAIAAAAAAAIAAAD+/wIAAAAAAAEAAAD9/wIAAAAAAAEAAAD8/wIAAAAAAAAAAAD//wIAAAAAAAEAAAAAAAIAAAAAAAEAAAABAAIAAAAAAAEAAAD9/wEAAAAAAAIAAAD8/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAEAAAAAAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAIAAAD+/wAAAAAAAAIAAAD9/wAAAAAAAAAAAAD8/wAAAAAAAAEAAAD///7/AAAAAAIAAAAAAP7/AAAAAAEAAAABAP7/AAAAAAAAAAD+//7/AAAAAAIAAAD9//7/AAAAAAAAAAD9//3/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAEAAAD///z/AAAAAAIAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAAAAP3/AAAAAAEAAAABAP3/AAAAAAAAAAD///3/AAAAAAIAAAD+//3/AAAAAAIAAAAFAAYAAwAAAAAAAQAEAAYAAwAAAAAAAQADAAYAAwAAAAAAAgACAAYAAwAAAAAAAQABAAYAAwAAAAAAAgAAAAYAAwAAAAAAAQD//wYAAwAAAAAAAwD+/wYAAwAAAAAAAQD9/wYAAwAAAAAAAQD8/wYAAwAAAAAAAgD7/wYAAwAAAAAAAQD6/wYAAwAAAAAAAQD5/wYAAwAAAAAAAQD4/wUAAwAAAAAAAQD4/wQAAwAAAAAAAgD4/wMAAwAAAAAAAQD4/wIAAwAAAAAAAgD4/wEAAwAAAAAAAgD4/wAAAwAAAAAAAgD4////AwAAAAAAAwD4//7/AwAAAAAAAQD4//3/AwAAAAAAAgD4//z/AwAAAAAAAQD4//v/AwAAAAAAAgD4//r/AwAAAAAAAQD4//n/AwAAAAAAAQD4//j/AwAAAAAAAQD5//j/AwAAAAAAAgD6//j/AwAAAAAAAQD7//j/AwAAAAAAAgD8//j/AwAAAAAAAgD9//j/AwAAAAAAAQD+//j/AwAAAAAAAgD///j/AwAAAAAAAwAAAPj/AwAAAAAAAQABAPj/AwAAAAAAAgACAPj/AwAAAAAAAQADAPj/AwAAAAAAAQAEAPj/AwAAAAAAAQAFAPj/AwAAAAAAAgAGAPj/AwAAAAAAAgAGAPn/AwAAAAAAAQAGAPr/AwAAAAAAAgAGAPv/AwAAAAAAAQAGAPz/AwAAAAAAAgAGAAIAAwAAAAAAAQAGAAMAAwAAAAAAAQAGAAQAAwAAAAAAAgAGAAUAAwAAAAAAAgAGAAYAAwAAAAAAAgAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAD4/wYAAwAAAAAAAgAHAPz/AwAAAAAAAQAIAPz/AwAAAAAAAgAJAPz/AwAAAAAAAQAKAPz/AwAAAAAAAQAHAAIAAwAAAAAAAgAIAAIAAwAAAAAAAQAJAAIAAwAAAAAAAQAKAAIAAwAAAAAAAgAGAAEAAAAAAAIAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAIAAAAJAAEAAAAAAAEAAAAKAAEAAAAAAAAAAAAKAAAAAAAAAAEAAAAJAP//AAAAAAEAAAAJAAAAAAAAAAEAAAAIAAAAAAAAAAEAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAIAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAKAP//AAAAAAAAAAAGAP//AAAAAAEAAAAHAP7/AAAAAAAAAAAIAP7/AAAAAAEAAAAJAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAEAAAAGAP7/AAAAAAAAAAAGAP3/AAAAAAIAAAAHAP3/AAAAAAAAAAAIAP3/AAAAAAIAAAALAP3/AAACAAAAAAAMAP3/AAACAAIAAAANAP3/AAACAAEAAAAOAP3/AAACAAEAAAAOAP7/AAACAAEAAAAOAP//AAACAAEAAAAOAAAAAAACAAAAAAAOAAEAAAACAAIAAAANAAEAAAACAAEAAAAMAAEAAAACAAEAAAALAAEAAAACAAAAAAALAAAAAAACAAEAAAAMAP//AAACAAEAAAANAP//AAACAAAAAAANAAAAAAACAAIAAAAMAAAAAAACAAAAAAALAP//AAACAAEAAAAMAP7/AAACAAAAAAANAP7/AAACAAEAAAALAP7/AAACAAEAAAALAPz/AwAAAAAABgAMAPz/AwAAAAAABQANAPz/AwAAAAAABQAOAPz/AwAAAAAABgAPAPz/AwAAAAAABQALAAIAAwAAAAAABQAMAAIAAwAAAAAABQANAAIAAwAAAAAABQAOAAIAAwAAAAAABgAQAPz/AwAAAAAABgARAPz/AwAAAAAABgASAPz/AwAAAAAABQATAPz/AwAAAAAABgAUAPz/AwAAAAAABgAPAP3/AAACAAEAAAAQAP3/AAACAAIAAAARAP3/AAACAAAAAAASAP3/AAACAAEAAAATAP3/AAACAAAAAAATAP7/AAACAAAAAAATAP//AAACAAEAAAATAAAAAAACAAIAAAATAAEAAAACAAAAAAATAAIAAAACAAIAAAASAAIAAAACAAIAAAARAAIAAAACAAEAAAAQAAIAAAACAAAAAAAPAAIAAAACAAAAAAAPAAEAAAACAAIAAAAQAAEAAAACAAEAAAARAAEAAAACAAAAAAASAAEAAAACAAIAAAAQAAAAAAACAAIAAAARAAAAAAACAAAAAAASAAAAAAACAAAAAAAPAAAAAAACAAIAAAAPAP//AAACAAEAAAAQAP//AAACAAEAAAARAP//AAACAAAAAAASAP//AAACAAIAAAAPAP7/AAACAAEAAAAQAP7/AAACAAEAAAARAP7/AAACAAEAAAASAP7/AAACAAAAAAAUAAAAAwAAAAAABgAUAAEAAwAAAAAABgAUAAIAAwAAAAAABgAPAAMAAAACAAIAAAAPAAQAAAACAAIAAAAPAAUAAAACAAAAAAAPAAYAAAACAAAAAAAPAAcAAAACAAEAAAAPAAgAAAACAAEAAAAPAAkAAAACAAIAAAAPAAoAAAACAAAAAAAPAAsAAAACAAEAAAAPABAAAAACAAIAAAAPABEAAAACAAEAAAAPABIAAAACAAAAAAAPABMAAAACAAAAAAAPABQAAAACAAAAAAAPABUAAAACAAAAAAAQABUAAAACAAEAAAARABUAAAACAAEAAAASABUAAAACAAEAAAATABUAAAACAAEAAAAUABUAAAACAAAAAAAVABUAAAACAAAAAAAWABUAAAACAAEAAAAXABUAAAACAAAAAAAYABUAAAACAAAAAAAZABUAAAACAAEAAAAaABUAAAACAAIAAAAbABUAAAACAAAAAAAcABUAAAACAAIAAAAdABUAAAACAAIAAAAdABQAAAACAAAAAAAdABMAAAACAAEAAAAdABIAAAACAAIAAAAdABEAAAACAAIAAAAdABAAAAACAAAAAAAdAA8AAAACAAIAAAAdAA4AAAACAAAAAAAdAA0AAAACAAEAAAAdAAwAAAACAAEAAAAdAAsAAAACAAAAAAAdAAoAAAACAAEAAAAdAAkAAAACAAEAAAAdAAgAAAACAAAAAAAdAAcAAAACAAAAAAAdAAYAAAACAAAAAAAdAAUAAAACAAIAAAAdAAQAAAACAAEAAAAdAAMAAAACAAIAAAAcAAMAAAACAAEAAAAbAAMAAAACAAIAAAAaAAMAAAACAAIAAAAZAAMAAAACAAIAAAAYAAMAAAACAAAAAAAXAAMAAAACAAIAAAAWAAMAAAACAAIAAAAVAAMAAAACAAEAAAAVAAQAAAACAAAAAAAUAAQAAAACAAAAAAATAAQAAAACAAEAAAASAAQAAAACAAIAAAASAAMAAAACAAIAAAARAAMAAAACAAAAAAAQAAMAAAACAAAAAAATAAMAAAACAAEAAAAUAAMAAAACAAIAAAAQAAQAAAACAAEAAAARAAQAAAACAAAAAAAWAAQAAAACAAAAAAAXAAQAAAACAAIAAAAYAAQAAAACAAEAAAAZAAQAAAACAAIAAAAaAAQAAAACAAIAAAAbAAQAAAACAAAAAAAcAAQAAAACAAIAAAAcAAUAAAACAAEAAAAbAAUAAAACAAEAAAAaAAUAAAACAAEAAAAZAAUAAAACAAIAAAAYAAUAAAACAAEAAAAXAAUAAAACAAAAAAAWAAUAAAACAAAAAAAVAAUAAAACAAIAAAAUAAUAAAACAAAAAAATAAUAAAACAAIAAAATAAYAAAACAAAAAAASAAYAAAACAAAAAAASAAUAAAACAAEAAAARAAUAAAACAAAAAAAVAAYAAAACAAAAAAAUAAYAAAACAAEAAAARAAYAAAACAAIAAAAQAAYAAAACAAAAAAARAAcAAAACAAIAAAAQAAcAAAACAAAAAAAQAAUAAAACAAIAAAARAAgAAAACAAIAAAAWAAYAAAACAAIAAAAXAAYAAAACAAIAAAAXAAcAAAACAAEAAAAWAAcAAAACAAEAAAAWAAgAAAACAAAAAAAVAAgAAAACAAAAAAAVAAkAAAACAAEAAAAUAAkAAAACAAIAAAATAAkAAAACAAEAAAASAAkAAAACAAEAAAARAAkAAAACAAIAAAASAAgAAAACAAEAAAASAAcAAAACAAIAAAATAAcAAAACAAAAAAAUAAgAAAACAAEAAAAQAAkAAAACAAIAAAAQAAgAAAACAAIAAAATAAgAAAACAAAAAAAUAAcAAAACAAIAAAAVAAcAAAACAAIAAAAYAAYAAAACAAEAAAAZAAYAAAACAAEAAAAaAAYAAAACAAEAAAAbAAYAAAACAAAAAAAcAAYAAAACAAEAAAAbAAcAAAACAAIAAAAaAAcAAAACAAAAAAAZAAcAAAACAAAAAAAYAAcAAAACAAAAAAAcAAcAAAACAAEAAAAXAAgAAAACAAEAAAAYAAgAAAACAAAAAAAZAAgAAAACAAIAAAAaAAgAAAACAAAAAAAbAAgAAAACAAAAAAAcAAgAAAACAAEAAAAaAAkAAAACAAIAAAAZAAkAAAACAAEAAAAYAAkAAAACAAIAAAAXAAkAAAACAAEAAAAWAAkAAAACAAAAAAAbAAkAAAACAAAAAAAcAAkAAAACAAIAAAAcAAoAAAACAAEAAAAcAAsAAAACAAIAAAAcAAwAAAACAAIAAAAcAA0AAAACAAEAAAAcAA4AAAACAAAAAAAcAA8AAAACAAAAAAAcABAAAAACAAEAAAAcABEAAAACAAIAAAAcABIAAAACAAIAAAAcABMAAAACAAAAAAAcABQAAAACAAIAAAAbABQAAAACAAEAAAAaABQAAAACAAAAAAAZABQAAAACAAIAAAAYABQAAAACAAIAAAAXABQAAAACAAAAAAAWABQAAAACAAAAAAAVABQAAAACAAAAAAAUABQAAAACAAIAAAATABQAAAACAAAAAAASABQAAAACAAEAAAARABQAAAACAAEAAAAQABQAAAACAAAAAAAQABMAAAACAAIAAAAQABIAAAACAAEAAAAQABEAAAACAAIAAAAQABAAAAACAAIAAAAQAA8AAAACAAIAAAAQAA4AAAACAAEAAAAQAA0AAAACAAEAAAAQAAwAAAACAAAAAAAQAAsAAAACAAAAAAAQAAoAAAACAAEAAAARAAoAAAACAAEAAAASAAoAAAACAAAAAAATAAoAAAACAAAAAAAUAAoAAAACAAIAAAAVAAoAAAACAAEAAAAWAAoAAAACAAEAAAAXAAoAAAACAAAAAAAaAAoAAAACAAEAAAAbAAoAAAACAAIAAAAbAAwAAAACAAIAAAAbAA0AAAACAAAAAAAaAAwAAAACAAEAAAAaAAsAAAACAAEAAAAZAAsAAAACAAAAAAAZAAoAAAACAAAAAAAYAAoAAAACAAIAAAAbAAsAAAACAAIAAAAbAA8AAAACAAAAAAAbABAAAAACAAIAAAAbABEAAAACAAEAAAAbABIAAAACAAIAAAAbABMAAAACAAEAAAAbAA4AAAACAAIAAAAaABIAAAACAAEAAAAaABEAAAACAAAAAAAaABAAAAACAAIAAAAaAA8AAAACAAEAAAAaAA4AAAACAAEAAAAaAA0AAAACAAIAAAAaABMAAAACAAAAAAAZABMAAAACAAAAAAAZABIAAAACAAAAAAAZABEAAAACAAAAAAAZABAAAAACAAIAAAAZAA8AAAACAAEAAAAZAA4AAAACAAEAAAAZAA0AAAACAAIAAAAZAAwAAAACAAIAAAAYABEAAAACAAAAAAAYABIAAAACAAIAAAAXABMAAAACAAAAAAAWABMAAAACAAEAAAAWABIAAAACAAEAAAAXABIAAAACAAAAAAAYABMAAAACAAEAAAAVABMAAAACAAIAAAAUABMAAAACAAEAAAATABMAAAACAAEAAAASABMAAAACAAAAAAATABIAAAACAAEAAAAUABIAAAACAAIAAAAVABIAAAACAAAAAAARABMAAAACAAAAAAARABIAAAACAAIAAAASABIAAAACAAAAAAAXABEAAAACAAIAAAAWABEAAAACAAEAAAAVABEAAAACAAIAAAAUABEAAAACAAEAAAATABEAAAACAAEAAAASABEAAAACAAIAAAARABEAAAACAAAAAAATABAAAAACAAAAAAASABAAAAACAAIAAAARABAAAAACAAAAAAAUABAAAAACAAAAAAAVABAAAAACAAIAAAAWABAAAAACAAEAAAAXABAAAAACAAEAAAAYABAAAAACAAIAAAASAA8AAAACAAIAAAARAA8AAAACAAAAAAATAA8AAAACAAIAAAAUAA8AAAACAAAAAAAVAA8AAAACAAIAAAAWAA8AAAACAAEAAAAXAA8AAAACAAIAAAAYAA8AAAACAAAAAAASAA4AAAACAAAAAAATAA4AAAACAAAAAAAUAA4AAAACAAIAAAAVAA4AAAACAAIAAAAWAA4AAAACAAIAAAAXAA4AAAACAAEAAAARAA4AAAACAAIAAAAYAA4AAAACAAIAAAASAA0AAAACAAEAAAATAA0AAAACAAEAAAAUAA0AAAACAAEAAAAVAA0AAAACAAEAAAAWAA0AAAACAAAAAAAXAA0AAAACAAEAAAAYAA0AAAACAAAAAAARAA0AAAACAAAAAAAUAAwAAAACAAAAAAATAAwAAAACAAAAAAASAAwAAAACAAAAAAARAAwAAAACAAAAAAAVAAwAAAACAAIAAAAWAAwAAAACAAAAAAAXAAwAAAACAAIAAAARAAsAAAACAAIAAAASAAsAAAACAAEAAAATAAsAAAACAAAAAAAUAAsAAAACAAEAAAAVAAsAAAACAAAAAAAWAAsAAAACAAIAAAAXAAsAAAACAAAAAAAYAAsAAAACAAAAAAAYAAwAAAACAAAAAAAOAAMAAwAAAAAABgAOAAQAAwAAAAAABgAOAA0AAwAAAAAABgAOAA4AAwAAAAAABgAOAA8AAwAAAAAABQAOABIAAwAAAAAABQAOABMAAwAAAAAABgAOABQAAwAAAAAABQAOABEAAwAAAAAABgAOABAAAwAAAAAABQAOABUAAwAAAAAABgAOABYAAwAAAAAABgAPABYAAwAAAAAABQAQABYAAwAAAAAABgARABYAAwAAAAAABQASABYAAwAAAAAABQATABYAAwAAAAAABgAUABYAAwAAAAAABQAVABYAAwAAAAAABQAWABYAAwAAAAAABQAXABYAAwAAAAAABgAYABYAAwAAAAAABQAZABYAAwAAAAAABgAaABYAAwAAAAAABQAbABYAAwAAAAAABgAcABYAAwAAAAAABQAdABYAAwAAAAAABQAeABYAAwAAAAAABQAeABUAAwAAAAAABQAeABQAAwAAAAAABgAeABMAAwAAAAAABQAeABIAAwAAAAAABgAeABEAAwAAAAAABQAeABAAAwAAAAAABQAeAA0AAwAAAAAABQAeAAwAAwAAAAAABQAeAAsAAwAAAAAABQAeAAoAAwAAAAAABQAeAAkAAwAAAAAABgAeAAgAAwAAAAAABgAeAAcAAwAAAAAABQAeAAYAAwAAAAAABQAeAAUAAwAAAAAABQAeAAQAAwAAAAAABQAeAAMAAwAAAAAABgAeAAIAAwAAAAAABQAdAAIAAwAAAAAABgAcAAIAAwAAAAAABgAbAAIAAwAAAAAABgAaAAIAAwAAAAAABgAZAAIAAwAAAAAABgAYAAIAAwAAAAAABQAXAAIAAwAAAAAABQAWAAIAAwAAAAAABQAVAAIAAwAAAAAABgAOAAUAAwAAAAAABgAOAAYAAwAAAAAABQAOAAcAAwAAAAAABgAOAAgAAwAAAAAABgAOAAkAAwAAAAAABQAOAAoAAwAAAAAABQAOAAsAAwAAAAAABQAOAAwAAwAAAAAABQAPAAwAAAACAAIAAAAPAA0AAAACAAEAAAAPAA4AAAACAAEAAAAPAA8AAAACAAEAAAAeAA8AAwAAAAAABgAeAA4AAwAAAAAABgAUAP3/AwAAAAAABQAUAP7/AwAAAAAABgAUAP//AwAAAAAABQA=")
tile_set = ExtResource("1_ruh4l")

[node name="ParallaxBackground1" type="ParallaxBackground" parent="."]
visible = false
scroll_offset = Vector2(547.328, 204.532)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground1"]
modulate = Color(1, 1, 1, 0)
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(3584, 3584)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground1/ParallaxLayer"]
modulate = Color(0.160784, 0.160784, 0.160784, 1)
scale = Vector2(2, 2)
texture = ExtResource("3_4xn7t")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(547.328, 204.532)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1792, 1792)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
modulate = Color(0.160784, 0.160784, 0.160784, 1)
scale = Vector2(2, 2)
texture = ExtResource("4_1cx8c")

[node name="T1" type="Area2D" parent="."]
position = Vector2(1104, -48)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="T1"]
shape = SubResource("RectangleShape2D_uplna")

[node name="T2" type="Area2D" parent="."]
position = Vector2(1008, -48)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="T2"]
shape = SubResource("RectangleShape2D_uplna")

[node name="SpawnpointL" type="Node2D" parent="."]
position = Vector2(48, 48)

[node name="0" type="Node2D" parent="SpawnpointL" groups=["SpawnLocations"]]

[node name="1" type="Node2D" parent="SpawnpointL" groups=["SpawnLocations"]]
position = Vector2(0, -192)

[node name="Party" parent="." instance=ExtResource("2_cdso0")]
position = Vector2(48, 48)

[node name="MultiplayerManager" type="Node" parent="."]
script = ExtResource("7_hjehs")
MP = ExtResource("8_rpyn5")
OWP = ExtResource("9_d71dx")

[node name="Ping" type="Control" parent="MultiplayerManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("8_iv8b4")

[node name="PingSpr" parent="MultiplayerManager/Ping" instance=ExtResource("9_d71dx")]

[node name="ContCursor" type="Node" parent="MultiplayerManager"]
script = ExtResource("10_40lmw")

[node name="Cursor" type="Sprite2D" parent="MultiplayerManager/ContCursor"]
visible = false
z_index = 8
texture = SubResource("GradientTexture2D_diat8")

[node name="DiscordManager" parent="." instance=ExtResource("6_ugtmj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ak5k")
}

[connection signal="area_entered" from="T1" to="." method="_on_t_1_area_entered"]
[connection signal="area_entered" from="T2" to="." method="_on_t_2_area_entered"]
[connection signal="moved" from="Party" to="MultiplayerManager" method="_on_party_moved"]
